# self-driving-ferrari

./: .gitignore  README.md
firmware/: micro_ros_agent.sh  platformio.ini
firmware/include/network/: network.hpp  ros.h
firmware/include/network/publishers/: hello_world.hpp  imu.hpp  odom.hpp  sensor_battery.hpp
firmware/include/network/services/: arm_disarm.hpp  get_kinematic_limits.hpp  toggle_arm_actuators.hpp  toggle_engage_vehicle.hpp  vehicle_info.hpp
firmware/include/network/subscribers/: ackermann_cmd.hpp  control_cmd.hpp  turtle1_cmd_vel.hpp
firmware/include/network/virtuals/: publisher.hpp  service.hpp  subscriber.hpp
firmware/include/sensors/: imu.hpp  rotary_encoder.hpp  sensor.hpp
firmware/include/vehicle/: configs.hpp  vehicle.hpp  vehicle_interface.hpp
firmware/include/vehicle/actuators/: actuator.hpp  motor.hpp  servo.hpp  (+2 more)
firmware/lib/as5600/: as5600.cpp  as5600.hpp
firmware/lib/pid/: pid.hpp
firmware/scripts/: calibration_propulsion.py  calibration_steering.py
firmware/src/: calibration_encoder.cpp  calibration_propulsion.cpp  calibration_steering.cpp  configure_motor.cpp  configure_propulsion.cpp  configure_steering.cpp  main.cpp  test.cpp
firmware/src/network/: network.cpp  netwrok.cpp
firmware/src/vehicle/: vehicle.cpp
software/: .gitignore  README.md  conanfile.py  rmc-build.yaml
software/.resources/: NASA-rpi-fix.desktop  RaspberryPi-initial-config.md
software/src/ferrari/: CMakeLists.txt  package.xml
software/src/ferrari_bringup/: CMakeLists.txt  package.xml
software/src/ferrari_bringup/launch/: ground.launch.py  joystick_control.launch.py  onboard.launch.py  system.launch.py  utils.py
software/src/ferrari_common/: CMakeLists.txt  package.xml
software/src/ferrari_common/launch/: ground_station.launch  mobile_station.launch  single_device.launch  test_external_control.launch
software/src/ferrari_common/msg/: ackermann_cmd.msg  control_cmd.msg  differential_drive_cmd.msg  motion_cmd.msg  omnidirectional_cmd.msg
software/src/ferrari_common/srv/: get_gate_mode.srv  get_kinematic_model.srv  is_engage.srv  set_gate_mode.srv  toggle_arm_vehicle.srv
software/src/ferrari_control/: .gitignore  CMakeLists.txt  README.md  package.xml
software/src/ferrari_control/include/: trajectory_follower.hpp  vehicle_cmd_gate.hpp
software/src/ferrari_control/include/ferrari_control/: control_gate.hpp  joy_teleop.hpp  keyboard_teleop.hpp  teleop_base.hpp  vehicle_cmd_gate.hpp
software/src/ferrari_control/include/ferrari_control/teleop/: KBHit.hpp  teleop_base.hpp  teleop_joy.hpp  teleop_keyboard.hpp
software/src/ferrari_control/launch/: auto.launch.py  control.launch.py  teleop.launch.py
software/src/ferrari_control/src/: KBHit.cpp  control_gate.cpp  joy_teleop.cpp  keyboard_teleop.cpp  teleop_base.cpp  trajectory_follower.cpp  trajectory_follower_node.cpp  vehicle_cmd_gate.cpp  vehicle_cmd_gate_node.cpp
software/src/ferrari_control/src/teleop/: KBHit.cpp  teleop_base.cpp  teleop_joy.cpp  teleop_keyboard.cpp
software/src/ferrari_dashboard/: CMakeLists.txt  package-lock.json  package.json  package.xml
software/src/ferrari_dashboard/launch/: dashboard.launch.py
software/src/ferrari_dashboard/public/: index.html
software/src/ferrari_dashboard/src/: bridge.js
software/src/ferrari_description/: CMakeLists.txt  package.xml
software/src/ferrari_description/launch/: display.launch.py  simulation.launch.py
software/src/ferrari_description/rviz/: display.rviz
software/src/ferrari_description/src/: ackermann_to_gazebo.cpp
software/src/ferrari_description/urdf/: robot.urdf.xacro
software/src/ferrari_driver/: CMakeLists.txt  package.xml
software/src/ferrari_human_machine_interface/: CMakeLists.txt  README.md  package.xml
software/src/ferrari_human_machine_interface/include/: KBHit.hpp  control_interface.hpp  joy_interface.hpp  joy_to_control_cmd.hpp  keyboard_interface.hpp
software/src/ferrari_human_machine_interface/src/: KBHit.cpp  control_interface.cpp  joy_interface.cpp  joy_to_control_cmd.cpp  joy_to_control_cmd_node.cpp  keyboard_interface.cpp
software/src/ferrari_localization/: CMakeLists.txt  package.xml
software/src/ferrari_mapping/: CMakeLists.txt  package.xml
software/src/ferrari_msgs/: CMakeLists.txt  package.xml
software/src/ferrari_navigation/: CMakeLists.txt  package.xml
software/src/ferrari_perception/: CMakeLists.txt  README.md  package.xml
software/src/ferrari_perception/config/: calibration.yaml
software/src/ferrari_perception/include/ferrari_perception/: line_detector.hpp
software/src/ferrari_perception/launch/: perception.launch.py
software/src/ferrari_perception/scripts/: 01_calibrate_warp_points.py  02_calibrate_hsv.py  03_calibrate_meters_per_pixel.py  04_preview_full_pipeline.py  calib_utils.py
software/src/ferrari_perception/src/: line_detector.cpp
software/src/ferrari_planning/: CMakeLists.txt  package.xml
software/src/ferrari_sensing/: CMakeLists.txt  package.xml
software/src/ferrari_sensing/config/: calibration_data.txt  camera_info.yaml  camera_info_fallback.yaml  camera_info_windshield.yaml
software/src/ferrari_sensing/include/ferrari_sensing/: camera.hpp
software/src/ferrari_sensing/launch/: camera.launch.py  sensing.launch.py
software/src/ferrari_sensing/scripts/: camera_streaming.py
software/src/ferrari_sensing/src/: camera.cpp
software/src/ferrari_simulation/: CMakeLists.txt  package.xml
software/src/ferrari_teleop/: CMakeLists.txt  package.xml
software/src/ferrari_vehicle/: CMakeLists.txt  package.xml
software/src/ferrari_vehicle/launch/: vehicle.launch.py
software/src/ferrari_vehicle/scripts/: test_gpio_serial.py
software/src/ferrari_vehicle_adapter/: CMakeLists.txt  README.md  package.xml
software/src/ferrari_vehicle_adapter/include/: ackermann_adapter.hpp  differential_drive_adapter.hpp  kinematic_adapter_interface.hpp  vehicle_adapter.hpp
software/src/ferrari_vehicle_adapter/src/: ackermann_adapter.cpp  differential_drive_adapter.cpp  vehicle_adapter.cpp
software/src/ferrari_vehicle_interface/: CMakeLists.txt  package.xml
(+22 files in other folders)
