<?xml version="1.0"?>
<package format="3">
  <name>ferrari_human_machine_interface</name>
  <version>0.0.0</version>
  <description>The ferrari_human_machine_interface package</description>

  <maintainer email="tommaso.bocchietti@gmail.com">Tommaso Bocchietti</maintainer>
  <license>MIT</license>

  <!-- Buildtool dependency for ROS 2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ferrari_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
